--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.daose.eyecursor.MainActivity">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
     <Button
         android:text="Start Bluetooth"
         android:onClick="requestBluetooth"
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/read"
+        android:text="Read data"
+        android:onClick="readData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
